// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pauseAfter renders 0 1`] = `
Array [
  .c0 {
  -webkit-pause-after: 0;
  -moz-pause-after: 0;
  -ms-pause-after: 0;
  pause-after: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: 0;
  -moz-pause-after: 0;
  -ms-pause-after: 0;
  pause-after: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: 0;
  -moz-pause-after: 0;
  -ms-pause-after: 0;
  pause-after: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: 0;
  -moz-pause-after: 0;
  -ms-pause-after: 0;
  pause-after: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`pauseAfter renders function 1`] = `
Array [
  .c0 {
  -webkit-pause-after: hasnot;
  -moz-pause-after: hasnot;
  -ms-pause-after: hasnot;
  pause-after: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: has;
  -moz-pause-after: has;
  -ms-pause-after: has;
  pause-after: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: hasnot;
  -moz-pause-after: hasnot;
  -ms-pause-after: hasnot;
  pause-after: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: has;
  -moz-pause-after: has;
  -ms-pause-after: has;
  pause-after: has;
}

<div
    className="c0"
  />,
]
`;

exports[`pauseAfter renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-pause-after: invalid.path.1;
  -moz-pause-after: invalid.path.1;
  -ms-pause-after: invalid.path.1;
  pause-after: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: invalid.path.1;
  -moz-pause-after: invalid.path.1;
  -ms-pause-after: invalid.path.1;
  pause-after: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: invalid.path.1;
  -moz-pause-after: invalid.path.1;
  -ms-pause-after: invalid.path.1;
  pause-after: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: invalid.path.1;
  -moz-pause-after: invalid.path.1;
  -ms-pause-after: invalid.path.1;
  pause-after: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`pauseAfter renders negative number 1`] = `
Array [
  .c0 {
  -webkit-pause-after: -54881;
  -moz-pause-after: -54881;
  -ms-pause-after: -54881;
  pause-after: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: -54881;
  -moz-pause-after: -54881;
  -ms-pause-after: -54881;
  pause-after: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: -42365;
  -moz-pause-after: -42365;
  -ms-pause-after: -42365;
  pause-after: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: -42365;
  -moz-pause-after: -42365;
  -ms-pause-after: -42365;
  pause-after: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pauseAfter renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-pause-after: July;
    -moz-pause-after: July;
    -ms-pause-after: July;
    pause-after: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-pause-after: August;
    -moz-pause-after: August;
    -ms-pause-after: August;
    pause-after: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-pause-after: September;
    -moz-pause-after: September;
    -ms-pause-after: September;
    pause-after: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-pause-after: November;
    -moz-pause-after: November;
    -ms-pause-after: November;
    pause-after: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-pause-after: July;
    -moz-pause-after: July;
    -ms-pause-after: July;
    pause-after: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-pause-after: August;
    -moz-pause-after: August;
    -ms-pause-after: August;
    pause-after: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-pause-after: September;
    -moz-pause-after: September;
    -ms-pause-after: September;
    pause-after: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-pause-after: November;
    -moz-pause-after: November;
    -ms-pause-after: November;
    pause-after: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-pause-after: May;
    -moz-pause-after: May;
    -ms-pause-after: May;
    pause-after: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-pause-after: June;
    -moz-pause-after: June;
    -ms-pause-after: June;
    pause-after: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-pause-after: April;
    -moz-pause-after: April;
    -ms-pause-after: April;
    pause-after: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-pause-after: November;
    -moz-pause-after: November;
    -ms-pause-after: November;
    pause-after: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-pause-after: May;
    -moz-pause-after: May;
    -ms-pause-after: May;
    pause-after: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-pause-after: June;
    -moz-pause-after: June;
    -ms-pause-after: June;
    pause-after: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-pause-after: April;
    -moz-pause-after: April;
    -ms-pause-after: April;
    pause-after: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-pause-after: November;
    -moz-pause-after: November;
    -ms-pause-after: November;
    pause-after: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pauseAfter renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-pause-after: July;
    -moz-pause-after: July;
    -ms-pause-after: July;
    pause-after: July;
  }
}

@media April {
  .c0 {
    -webkit-pause-after: August;
    -moz-pause-after: August;
    -ms-pause-after: August;
    pause-after: August;
  }
}

@media January {
  .c0 {
    -webkit-pause-after: September;
    -moz-pause-after: September;
    -ms-pause-after: September;
    pause-after: September;
  }
}

@media April {
  .c0 {
    -webkit-pause-after: November;
    -moz-pause-after: November;
    -ms-pause-after: November;
    pause-after: November;
  }
}

@media June {
  .c0 {
    -webkit-pause-after: August;
    -moz-pause-after: August;
    -ms-pause-after: August;
    pause-after: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-pause-after: July;
    -moz-pause-after: July;
    -ms-pause-after: July;
    pause-after: July;
  }
}

@media April {
  .c0 {
    -webkit-pause-after: August;
    -moz-pause-after: August;
    -ms-pause-after: August;
    pause-after: August;
  }
}

@media January {
  .c0 {
    -webkit-pause-after: September;
    -moz-pause-after: September;
    -ms-pause-after: September;
    pause-after: September;
  }
}

@media April {
  .c0 {
    -webkit-pause-after: November;
    -moz-pause-after: November;
    -ms-pause-after: November;
    pause-after: November;
  }
}

@media June {
  .c0 {
    -webkit-pause-after: August;
    -moz-pause-after: August;
    -ms-pause-after: August;
    pause-after: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-pause-after: January;
    -moz-pause-after: January;
    -ms-pause-after: January;
    pause-after: January;
  }
}

@media April {
  .c0 {
    -webkit-pause-after: December;
    -moz-pause-after: December;
    -ms-pause-after: December;
    pause-after: December;
  }
}

@media January {
  .c0 {
    -webkit-pause-after: April;
    -moz-pause-after: April;
    -ms-pause-after: April;
    pause-after: April;
  }
}

@media April {
  .c0 {
    -webkit-pause-after: May;
    -moz-pause-after: May;
    -ms-pause-after: May;
    pause-after: May;
  }
}

@media June {
  .c0 {
    -webkit-pause-after: June;
    -moz-pause-after: June;
    -ms-pause-after: June;
    pause-after: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-pause-after: January;
    -moz-pause-after: January;
    -ms-pause-after: January;
    pause-after: January;
  }
}

@media April {
  .c0 {
    -webkit-pause-after: December;
    -moz-pause-after: December;
    -ms-pause-after: December;
    pause-after: December;
  }
}

@media January {
  .c0 {
    -webkit-pause-after: April;
    -moz-pause-after: April;
    -ms-pause-after: April;
    pause-after: April;
  }
}

@media April {
  .c0 {
    -webkit-pause-after: May;
    -moz-pause-after: May;
    -ms-pause-after: May;
    pause-after: May;
  }
}

@media June {
  .c0 {
    -webkit-pause-after: June;
    -moz-pause-after: June;
    -ms-pause-after: June;
    pause-after: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`pauseAfter renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-pause-after: 54881;
  -moz-pause-after: 54881;
  -ms-pause-after: 54881;
  pause-after: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: 54881;
  -moz-pause-after: 54881;
  -ms-pause-after: 54881;
  pause-after: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: 42365;
  -moz-pause-after: 42365;
  -ms-pause-after: 42365;
  pause-after: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: 42365;
  -moz-pause-after: 42365;
  -ms-pause-after: 42365;
  pause-after: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`pauseAfter renders string 1`] = `
Array [
  .c0 {
  -webkit-pause-after: July;
  -moz-pause-after: July;
  -ms-pause-after: July;
  pause-after: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: July;
  -moz-pause-after: July;
  -ms-pause-after: July;
  pause-after: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: June;
  -moz-pause-after: June;
  -ms-pause-after: June;
  pause-after: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: June;
  -moz-pause-after: June;
  -ms-pause-after: June;
  pause-after: June;
}

<div
    className="c0"
  />,
]
`;

exports[`pauseAfter renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-pause-after: DarkSlateBlue;
  -moz-pause-after: DarkSlateBlue;
  -ms-pause-after: DarkSlateBlue;
  pause-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: DarkSlateBlue;
  -moz-pause-after: DarkSlateBlue;
  -ms-pause-after: DarkSlateBlue;
  pause-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: DarkSlateBlue;
  -moz-pause-after: DarkSlateBlue;
  -ms-pause-after: DarkSlateBlue;
  pause-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-pause-after: DarkSlateBlue;
  -moz-pause-after: DarkSlateBlue;
  -ms-pause-after: DarkSlateBlue;
  pause-after: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
